--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "license": "ISC",
   "dependencies": {
+    "@turf/turf": "^4.4.0",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.0",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.24.1",
@@ -41,6 +42,7 @@
   },
   "devDependencies": {
     "css-loader": "^0.28.4",
+    "json-loader": "^0.5.4",
     "postcss-loader": "^2.0.6",
     "style-loader": "^0.18.2"
   }
