--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "babel-loader": "^7.1.0",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
+    "google-maps-api": "^2.0.1",
     "koa": "^2.3.0",
     "koa-router": "^7.2.1",
     "koa-static": "^3.0.0",
